# ldjam58

./: .envrc.dist  .gitignore  Cargo.toml  README.MD  TODO.txt  build.rs  docker-compose.yml  flake.nix
.cargo/: config.toml
art/: asteroid.psd  crash.psd  hud.txt  planet.psd  retro_grid.psd  retro_grid_bg.psd  satellite.psd  satellite_original.psd  sun.psd  ui_concept.psd  ui_inspiration.psd
dev/: build_web.sh
src/: achievements.rs  asset_tracking.rs  dev_tools.rs  launching.rs  main.rs  sound.rs
src/collision/: mod.rs
src/effects/: gravity_viz.rs  mod.rs  red_star.rs
src/hud/: mod.rs
src/physics/: apply_directional_force.rs  calc_gravity.rs  directional_forces.rs  mod.rs  velocity.rs
src/score/: mod.rs
src/screens/: gameover.rs  gameplay.rs  loading.rs  mod.rs
src/sun_system/: asteroids.rs  earth.rs  mod.rs  navigation_instruments.rs  sun_particles.rs  thruster.rs
src/trails/: mod.rs
